# moviesdb

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.bot  README.md  api.py  bot.py  docker-compose.yml  interactive.py  logging_config.json  main.py  movies.ps1  playground.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_logging.py  start.sh  tst.py
.github/workflows/: ci.yml  tests.yml
botsrc/: bot_guest_manager.py  cmds.py  compiled.py  helper.py  utils.py
botsrc/commands/: __init__.py  _add.py  _books.py  _find.py  _group.py  _guest.py  _image.py  _list.py  _logs.py  _pop.py  _suggest.py  _tag.py  _upload.py  _watch.py
deploy/nginx/: moviesdb.conf
scripts/: encrypt_env.py
src/: app.py  crypto.py  dependencies.py  exceptions.py  mongo.py  parser.py  paths.py  settings.py  setup_logging.py
src/applications/api/: app.py  auth.py  dependencies.py  manage_users.py  schemas.py
src/applications/api/routers/: entries.py  stats.py  tags.py  watchlist.py
src/applications/bot/: app.py  commands.py  formatting.py
src/applications/fulltui/: app.py  fulltui.tcss
src/applications/fulltui/screens/: add_entry.py  browse.py  detail.py  home.py  search.py
src/applications/fulltui/widgets/: entry_card.py  stats_panel.py
src/applications/tui/: app.py  cli.py  crypt_cli.py  tui_app.py
src/applications/tui/apps/: base.py  image.py  sqlapp.py
src/apps/: __init__.py  app.py  base.py  book.py  image.py  images.py  sqlapp.py
src/models/: bot_guest_entry.py  chatbot_memory_entry.py  entry.py  entry_group.py  mongo_base.py  watchlist_entry.py
src/repos/: __init__.py  bot_guests.py  chatbot_memory.py  entries.py  mongo.py  mongo_base.py  watchlist_entries.py
src/services/: chatbot_service.py  entry_service.py  export_service.py  guest_service.py  image_service.py  watchlist_service.py
src/utils/: bot_guest_manager.py  env.py  git_utils.py  help_utils.py  mongo.py  plots.py  rich_utils.py  utils.py
tests/: conftest.py  test_books_mode.py  test_cmd_functions_bot.py  test_cmd_methods.py  test_cmd_methods_app.py  test_cmd_methods_books.py  test_env.py  test_images.py  test_mongo.py  test_parser.py
tests/utils/: test_env.py
