[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moviesdb"
version = "1.3.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.15",
    "boto3-stubs[boto3,s3]>=1.40.15",
    "click>=8.3.1",
    "dependency-injector>=4.48.3",
    "fastapi[standard]>=0.129.2",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "openai>=1.100.2",
    "pendulum>=3.2.0",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.13.1",
    "pyfzf>=0.3.1",
    "pymongo>=4.14.1",
    "pytelegrambotapi>=4.28.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "textual>=5.3.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
movies = "src.applications.tui.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.17.1",
    "plotly-stubs>=0.0.6",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "types-requests>=2.32.4.20250809",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning:supabase\\._sync\\.client"]

[tool.mypy]
explicit_package_bases = true
check_untyped_defs = true
